Keep overlays above map background

--- a/client/admin-route-finder.html
+++ b/client/admin-route-finder.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body class="page page-admin-route-finder">
+<body class="page map-background page-admin-route-finder">
     <div id="topbar" data-nav-open="false">
     <a href="/" class="topbar__brand">iTaxi-Finder</a>
     <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
