Refactor mobile panels into standardized overlays

--- a/client/community.html
+++ b/client/community.html
@@ -10,7 +10,7 @@
 <body data-page="community">
   <div id="topbar"></div>
 
-  <section class="community-directory" data-panel>
+  <section class="panel panel--community-directory" data-panel-id="community-directory" data-panel-type="overlay">
     <h1>Community Townships</h1>
     <p class="help-text">Choose a township to see local updates, partners, and route-specific notices with the iTaxi-Finder map always in the background.</p>
     <div class="grid community-grid">
