--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 <body data-page="finder">
   <div id="topbar"></div>
 
-  <section class="route-finder-panel" data-panel>
+  <section class="panel panel--finder" data-panel-id="route-finder" data-panel-type="right">
     <h1>Route Finder</h1>
     <p class="help-text">Search the live database of shared taxi routes, view fare estimates, and see stop locations without leaving the map.</p>
     <label class="form-field">
