--- a/client/registration.html
+++ b/client/registration.html
@@ -10,7 +10,7 @@
 <body data-page="registration">
   <div id="topbar"></div>
 
-  <section class="registration-panel" data-panel>
+  <section class="panel panel--registration" data-panel-id="registration" data-panel-type="overlay">
     <h1>Register your profile</h1>
     <p class="help-text">Join the iTaxi-Finder ecosystem as a contributor. Choose the role that best describes you, capture the essentials, and start sharing verified route information.</p>
 
