--- a/client/route-adder.html
+++ b/client/route-adder.html
@@ -10,7 +10,7 @@
 <body data-page="adder">
   <div id="topbar"></div>
 
-  <section class="route-adder-panel" data-panel>
+  <section class="panel panel--adder" data-panel-id="route-adder" data-panel-type="right">
     <h1>Route Adder</h1>
     <p class="help-text">Capture new shared taxi routes or update the ones already in our database. Every change is saved against your profile for accountability.</p>
     <div id="route-editor-status" class="status-text">Log in to add or edit routes.</div>
