--- a/client/about.html
+++ b/client/about.html
@@ -7,22 +7,21 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body>
-  <div id="topbar">
-    <a href="/">iTaxi-Finder</a>
-    <a href="/">Route Finder</a>
-    <a href="/route-adder.html">Route Adder</a>
-    <a href="/delivery.html">Delivery</a>
-    <a href="/community.html">Community</a>
-    <a href="/registration.html">Registration</a>
-    <a href="/about.html">About</a>
-    <button onclick="toggleUI()">Hide UI</button>
-  </div>
-  <div style="position:absolute;top:60px;left:10px;right:10px;bottom:10px;overflow:auto;background:rgba(255,255,255,0.8);padding:20px;">
-    <h1>About iTaxi-Finder</h1>
-    <p>iTaxi-Finder is a live mapping and analytics platform for South Africa’s minibus-taxi ecosystem. By publishing useful route intel—common routes and variations with frequency ratings, fares, destination hand-signals, and, where available, live taxi locations from a lightweight driver app (even via WhatsApp Live Location)—we make everyday commutes clearer and grow demand for operators. Fleet owners get vehicle usage and location analytics to spot efficiency gains and improve profits. A future-facing parcel-delivery module leverages the existing taxi network for low-cost, near-route deliveries. The Community page surfaces geo-tagged social posts along mapped routes and highlights sponsor partners.</p>
-  </div>
-  <div id="map"></div>
+<body data-page="about">
+  <div id="topbar"></div>
 
+  <section class="panel panel--about" data-panel-id="about" data-panel-type="overlay">
+    <h1>About iTaxi-Finder</h1>
+    <p class="help-text">iTaxi-Finder is a live mapping and analytics platform for South Africa’s minibus-taxi ecosystem. Our mission is to make everyday commutes clearer for passengers while helping operators grow demand and profitability.</p>
+    <ul class="bullet-list">
+      <li><strong>Route intelligence:</strong> Capture and search gestures, fares, and stop details for common and emerging routes.</li>
+      <li><strong>Operational analytics:</strong> Fleet owners and associations can monitor vehicle usage to spot efficiency gains.</li>
+      <li><strong>Community storytelling:</strong> Township partners share updates, offers, and safety alerts alongside mapped routes.</li>
+      <li><strong>Delivery pilot:</strong> A parcel module leverages taxi infrastructure for low-cost, near-route deliveries.</li>
+    </ul>
+    <p class="help-text">Close this overlay to keep exploring the live map experience.</p>
+  </section>
+
+  <div id="map" role="presentation"></div>
 </body>
 </html>
