--- a/client/community/kwanonqaba.html
+++ b/client/community/kwanonqaba.html
@@ -9,7 +9,7 @@
 </head>
 <body data-page="community">
   <div id="topbar"></div>
-  <section class="community-sheet" data-panel>
+  <section class="panel panel--community-sheet" data-panel-id="community-kwanonqaba" data-panel-type="overlay">
     <h1>KwaNonqaba</h1>
     <p>No posts yet.</p>
   </section>
