--- a/client/delivery.html
+++ b/client/delivery.html
@@ -7,21 +7,20 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body>
-  <div id="topbar">
-    <a href="/">iTaxi-Finder</a>
-    <a href="/">Route Finder</a>
-    <a href="/route-adder.html">Route Adder</a>
-    <a href="/delivery.html">Delivery</a>
-    <a href="/community.html">Community</a>
-    <a href="/registration.html">Registration</a>
-    <a href="/about.html">About</a>
-    <button onclick="toggleUI()">Hide UI</button>
-  </div>
-  <div style="position:fixed;top:50px;left:0;right:0;background:#ffc;padding:10px;z-index:1000;">
-    The taxi industry already has the infrastructure and building blocks to facilitate a parcel delivery service...
-  </div>
-  <div id="map"></div>
+<body data-page="delivery">
+  <div id="topbar"></div>
 
+  <section class="panel panel--delivery" data-panel-id="delivery" data-panel-type="overlay">
+    <h1>Delivery Extenda</h1>
+    <p class="help-text">The taxi industry already has the infrastructure and building blocks to facilitate a parcel delivery service. We overlay the same map to plan waypoints, notify riders, and coordinate pick-ups without disrupting commuter flows.</p>
+    <ul class="bullet-list">
+      <li><strong>Near-route parcel drop-offs:</strong> Drivers can accept parcel legs that closely match their passenger routes.</li>
+      <li><strong>Community collection points:</strong> Partner spaza shops, ranks, and depots serve as trusted exchange hubs.</li>
+      <li><strong>Live tracking:</strong> WhatsApp live locations and driver check-ins keep senders updated every step of the way.</li>
+    </ul>
+    <p class="help-text">Use the map behind this panel to visualise delivery corridors, then close the panel to continue browsing routes.</p>
+  </section>
+
+  <div id="map" role="presentation"></div>
 </body>
 </html>
