Refine mobile drawer aesthetics and behaviour

--- a/client/community/nyanga.html
+++ b/client/community/nyanga.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="../styles.css" />
   <script src="../app.js" defer></script>
 </head>
-<body data-page="community">
-  <div id="topbar"></div>
+<body data-page="community" class="app-body">
+  <div class="menu-ambient" aria-hidden="true"></div>
+  <aside id="topbar" class="menu-drawer"></aside>
   <section class="panel panel--community-sheet" data-panel-id="community-nyanga" data-panel-type="overlay">
     <h1>Nyanga</h1>
     <p>No posts yet.</p>
