--- a/client/delivery.html
+++ b/client/delivery.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body data-page="delivery">
-  <div id="topbar"></div>
+<body data-page="delivery" class="app-body">
+  <div class="menu-ambient" aria-hidden="true"></div>
+  <aside id="topbar" class="menu-drawer"></aside>
 
   <section class="panel panel--delivery" data-panel-id="delivery" data-panel-type="overlay">
     <h1>Delivery Extenda</h1>
