--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body data-page="finder">
-  <div id="topbar"></div>
+<body data-page="finder" class="app-body">
+  <div class="menu-ambient" aria-hidden="true"></div>
+  <aside id="topbar" class="menu-drawer"></aside>
 
   <section class="panel panel--finder" data-panel-id="route-finder" data-panel-type="right">
     <h1>Route Finder</h1>
