--- a/client/route-adder.html
+++ b/client/route-adder.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body data-page="adder">
-  <div id="topbar"></div>
+<body data-page="adder" class="app-body">
+  <div class="menu-ambient" aria-hidden="true"></div>
+  <aside id="topbar" class="menu-drawer"></aside>
 
   <section class="panel panel--adder" data-panel-id="route-adder" data-panel-type="right">
     <h1>Route Adder</h1>
