--- a/client/about.html
+++ b/client/about.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body data-page="about">
-  <div id="topbar"></div>
+<body data-page="about" class="app-body">
+  <div class="menu-ambient" aria-hidden="true"></div>
+  <aside id="topbar" class="menu-drawer"></aside>
 
   <section class="panel panel--about" data-panel-id="about" data-panel-type="overlay">
     <h1>About iTaxi-Finder</h1>
