--- a/client/registration.html
+++ b/client/registration.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body data-page="registration">
-  <div id="topbar"></div>
+<body data-page="registration" class="app-body">
+  <div class="menu-ambient" aria-hidden="true"></div>
+  <aside id="topbar" class="menu-drawer"></aside>
 
   <section class="panel panel--registration" data-panel-id="registration" data-panel-type="overlay">
     <h1>Register your profile</h1>
