Enhance route drawing UI and add commuter role

--- a/client/registration.html
+++ b/client/registration.html
@@ -46,6 +46,7 @@
           <option value="taxi rank depot/depot shop">Taxi Rank Depot / Depot Shop</option>
           <option value="monthly subscriber">Monthly Subscriber</option>
           <option value="taxi owner">Taxi Owner</option>
+          <option value="taxi rider/commuter">Taxi Rider / Commuter</option>
         </select>
       </label>
       <div id="role-extra-fields" class="role-extra"></div>
