Enable Google Routes snapping in route adder

--- a/client/route-adder.html
+++ b/client/route-adder.html
@@ -84,7 +84,7 @@
               <span class="button-icon" aria-hidden="true"></span>
               <span>Start plotting</span>
             </button>
-            <button type="button" id="route-snap" class="button-primary" disabled>Snap to roads</button>
+            <button type="button" id="route-snap" class="button-primary" disabled>Snap with Google Routes</button>
             <button type="button" id="route-clear-path" class="button-secondary">Clear path</button>
           </div>
         </div>
