--- a/client/registration.html
+++ b/client/registration.html
@@ -9,8 +9,8 @@
 </head>
 <body class="page map-background page-registration">
     <div id="topbar" data-nav-open="false">
-    <a href="/" class="topbar__brand">iTaxi-Finder</a>
-    <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
+      <a href="/" class="topbar__brand">iTaxi-Finder</a>
+      <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
         <span class="topbar__menu-line"></span>
@@ -18,15 +18,28 @@
       </span>
       <span class="visually-hidden">Toggle navigation</span>
     </button>
-    <nav id="topbar-navigation" class="topbar__links" data-nav-links>
-      <a href="/route-finder.html">Route Finder</a>
-      <a href="/route-adder.html">Route Adder</a>
-      <a href="/delivery.html">Delivery</a>
-      <a href="/community.html">Community</a>
-      <a href="/registration.html" aria-current="page">Registration</a>
-      <a href="/about.html">About</a>
-    </nav>
-  </div>
+      <div class="mobile-nav" data-nav-container>
+        <div class="mobile-nav__header">
+          <span class="mobile-nav__title">Menu</span>
+          <button type="button" class="mobile-nav__close" data-nav-close>
+            <span class="visually-hidden">Close navigation</span>
+            <span class="mobile-nav__close-icon" aria-hidden="true">
+              <span class="mobile-nav__close-line"></span>
+              <span class="mobile-nav__close-line"></span>
+            </span>
+          </button>
+        </div>
+        <nav id="topbar-navigation" class="topbar__links" data-nav-links>
+              <a href="/route-finder.html">Route Finder</a>
+              <a href="/route-adder.html">Route Adder</a>
+              <a href="/delivery.html">Delivery</a>
+              <a href="/community.html">Community</a>
+              <a href="/registration.html" aria-current="page">Registration</a>
+              <a href="/about.html">About</a>
+            </nav>
+      </div>
+      <div class="mobile-nav__backdrop" data-nav-backdrop></div>
+    </div>
   <main
     class="content-panel overlay-panel"
     aria-labelledby="registration-heading"
