Tweak delivery banner messaging and layout

--- a/client/delivery.html
+++ b/client/delivery.html
@@ -41,9 +41,7 @@
       <div class="mobile-nav__backdrop" data-nav-backdrop></div>
     </div>
   <div class="delivery-banner" role="note">
-    <span>“The taxi industry already has the infrastructure and building blocks to facilitate a parcel delivery service, all that
-      remains is a central platform to manage, track and coordinate all order requests and the handovers they require along the
-      way.”</span>
+    <span>The Delivery feature is still under development.</span>
     <button type="button" data-dismiss-banner aria-label="Dismiss Delivery Extenda banner">Hide</button>
   </div>
   <main
