Add route notes support and move registration sign-in

--- a/client/registration.html
+++ b/client/registration.html
@@ -49,6 +49,21 @@
     <h1 id="registration-heading">Join the iTaxi-Finder network</h1>
     <p>Register your role to unlock tools tailored for collectors, drivers, depot owners, and partners. We capture just enough
       information to verify your business, route alignment, and preferred contact channels before activating your workspace.</p>
+    <form id="login" class="registration-login" data-static-form data-login-form>
+      <fieldset>
+        <legend>Already registered? Sign in</legend>
+        <label>
+          Username
+          <input type="text" name="username" autocomplete="username" minlength="3" required />
+        </label>
+        <label>
+          Password
+          <input type="password" name="password" autocomplete="current-password" minlength="4" required />
+        </label>
+        <p class="registration-error" data-login-error hidden role="alert"></p>
+        <button type="submit" class="cta secondary">Sign in</button>
+      </fieldset>
+    </form>
     <section class="registration-account" aria-live="polite">
       <p class="registration-account__status" data-auth-status>Not signed in.</p>
       <button type="button" class="cta secondary registration-account__signout" data-logout-button hidden>Sign out</button>
@@ -125,21 +140,6 @@
       <div class="registration-owner-actions" data-registration-actions>
         <button type="submit" class="cta">Submit registration</button>
       </div>
-    </form>
-    <form class="registration-login" data-static-form data-login-form>
-      <fieldset>
-        <legend>Already registered? Sign in</legend>
-        <label>
-          Username
-          <input type="text" name="username" autocomplete="username" minlength="3" required />
-        </label>
-        <label>
-          Password
-          <input type="password" name="password" autocomplete="current-password" minlength="4" required />
-        </label>
-        <p class="registration-error" data-login-error hidden role="alert"></p>
-        <button type="submit" class="cta secondary">Sign in</button>
-      </fieldset>
     </form>
     <section
       id="registration-success"
