--- a/client/route-adder.html
+++ b/client/route-adder.html
@@ -136,6 +136,16 @@
             data-route-save-point-b
           />
         </li>
+        <li>
+          <label for="route-save-notes">Notes and comments (optional)</label>
+          <textarea
+            id="route-save-notes"
+            name="notes"
+            rows="3"
+            placeholder="Share any timing, safety or transfer tips commuters should know"
+            data-route-save-notes
+          ></textarea>
+        </li>
         <li class="route-save-dialog__contributor" data-route-save-contributor>
           <span class="route-save-dialog__contributor-heading">Registered contributor</span>
           <p class="route-save-dialog__contributor-line">
