Restore iTaxi-Finder brand link

--- a/client/community.html
+++ b/client/community.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page map-background page-community">
     <div id="topbar" data-nav-open="false">
-      <a href="/" class="topbar__brand">iTaxi-Finder</a>
+      <a href="/index.html" class="topbar__brand">iTaxi-Finder</a>
       <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
