Revamp RideFinder branding and transport modes

--- a/client/about.html
+++ b/client/about.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About iTaxi-Finder</title>
+  <title>About RideFinder</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
 <body class="page map-background page-about">
     <div id="topbar" data-nav-open="false">
-      <a href="/" class="topbar__brand">iTaxi-Finder</a>
+      <a href="/" class="topbar__brand">RideFinder</a>
       <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
@@ -46,14 +46,14 @@
     data-draggable-overlay
   >
     <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
-    <h1 id="about-heading">About iTaxi-Finder</h1>
-    <p>iTaxi-Finder is a live mapping and analytics platform for South Africa’s minibus-taxi ecosystem. By publishing useful route
-      intel—common routes and variations with frequency ratings, fares, destination hand-signals, and, where available, live taxi
-      locations from a lightweight driver app (even via WhatsApp Live Location)—we make everyday commutes clearer and grow demand
-      for operators.</p>
-    <p>Fleet owners get vehicle usage and location analytics to spot efficiency gains and improve profits. A future-facing
-      parcel-delivery module leverages the existing taxi network for low-cost, near-route deliveries. The Community page surfaces
-      geo-tagged social posts along mapped routes and highlights sponsor partners.</p>
+    <h1 id="about-heading">About RideFinder</h1>
+    <p>RideFinder is a live mapping and analytics platform for South Africa’s blended taxi, bus, and rail ecosystem. By publishing
+      useful route intel—common routes and variations with frequency ratings, fares, destination hand-signals, and, where
+      available, live vehicle locations from lightweight operator apps (even via WhatsApp Live Location)—we make everyday
+      commutes clearer and grow demand for operators across every mode.</p>
+    <p>Fleet owners and network managers get usage and location analytics to spot efficiency gains and improve profits. A
+      future-facing parcel-delivery module leverages existing transport corridors for low-cost, near-route deliveries. The
+      Community page surfaces geo-tagged social posts along mapped routes and highlights sponsor partners.</p>
   </main>
   <div id="map"></div>
 </body>
