--- a/client/delivery.html
+++ b/client/delivery.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page map-background page-delivery">
     <div id="topbar" data-nav-open="false">
-      <a href="/" class="topbar__brand">iTaxi-Finder</a>
+      <a href="/" class="topbar__brand">RideFinder</a>
       <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
@@ -51,16 +51,16 @@
   >
     <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <h1 id="delivery-heading">Delivery Extenda</h1>
-    <p>Connect township fleets, depots, and trusted partners to deliver parcels efficiently along existing minibus-taxi corridors.
-      Delivery Extenda wraps bookings, routing, and proof-of-handover into one coordinated workflow.</p>
+    <p>Connect township fleets, depots, and trusted partners to deliver parcels efficiently along existing taxi, bus, and rail
+      corridors. Delivery Extenda wraps bookings, routing, and proof-of-handover into one coordinated workflow.</p>
 
     <section aria-labelledby="delivery-how">
       <h2 id="delivery-how">How it works</h2>
       <ol>
         <li><strong>Create the order:</strong> Customers submit pickup and drop-off points plus an optional retail partner. Orders
           drop straight onto the live map.</li>
-        <li><strong>Plan the trip chain:</strong> Our routing engine pairs depot hops with taxi routes, scoring combinations via the
-          Google Routes API to minimise total travel distance and time.</li>
+        <li><strong>Plan the trip chain:</strong> Our routing engine pairs depot hops with multimodal routes, scoring combinations via
+          the Google Routes API to minimise total travel distance and time.</li>
         <li><strong>Move the parcel:</strong> Each handover scans a QR code to confirm custody as parcels travel from collector to
           rank depots, then to their final reception points.</li>
       </ol>
