--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>iTaxi-Finder Platform</title>
+  <title>RideFinder Platform</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
 <body class="page map-background page-home">
     <div id="topbar" data-nav-open="false">
-      <a href="/" class="topbar__brand" aria-current="page">iTaxi-Finder</a>
+      <a href="/" class="topbar__brand" aria-current="page">RideFinder</a>
       <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
@@ -46,16 +46,16 @@
     data-draggable-overlay
   >
     <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
-    <h1 id="home-heading">iTaxi-Finder keeps every commute in the know</h1>
+    <h1 id="home-heading">RideFinder keeps every commute in the know</h1>
     <p>
-      We built iTaxi-Finder to arm everyday commuters with clear, street-level taxi intel no matter where they live or
-      travel in South Africa. Tap into local hand signals, fares, and route variations so you always know which taxi to
-      catch and where it will take you.
+      We built RideFinder to arm everyday commuters with clear, street-level transport intel across taxis, buses, and
+      trains throughout South Africa. Tap into local hand signals, fares, and route variations so you always know which
+      service to catch and where it will take you.
     </p>
     <p>
-      Fleet owners and managers can watch their taxis in real time, spot gaps in coverage, and guide drivers with the
-      same live map. Explore the Route Finder to see what’s running nearby, or open the Route Adder to chart new
-      corridors and keep your data sharp.
+      Fleet owners and managers across road and rail can watch their vehicles in real time, spot gaps in coverage, and
+      guide operators with the same live map. Explore the Route Finder to see what’s running nearby, or open the Route
+      Adder to chart new corridors and keep your data sharp.
     </p>
     <div class="cta-row">
       <a class="cta" href="/route-finder.html">Explore routes</a>
