--- a/client/route-finder.html
+++ b/client/route-finder.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page map-background page-route-finder">
     <div id="topbar" data-nav-open="false">
-      <a href="/" class="topbar__brand">iTaxi-Finder</a>
+      <a href="/" class="topbar__brand">RideFinder</a>
       <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
@@ -67,8 +67,8 @@
     <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <h1 id="finder-heading">Saved routes directory</h1>
     <p class="route-finder-panel__intro">
-      Browse every saved corridor in the system. Select a route to highlight it on the map and review fares, stops and
-      service hours.
+      Browse every saved corridor in the system across taxi, bus, and rail services. Select a route to highlight it on
+      the map and review fares, stops, modes, and service hours.
     </p>
     <label for="route-select" class="route-finder-panel__label">Saved routes</label>
     <select id="route-select" name="route-select" aria-describedby="route-select-help">
