--- a/client/community.html
+++ b/client/community.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page map-background page-community">
     <div id="topbar" data-nav-open="false">
-      <a href="/" class="topbar__brand">iTaxi-Finder</a>
+      <a href="/" class="topbar__brand">RideFinder</a>
       <button type="button" class="topbar__menu" aria-expanded="false" aria-controls="topbar-navigation" data-nav-toggle>
       <span class="topbar__menu-icon" aria-hidden="true">
         <span class="topbar__menu-line"></span>
@@ -53,8 +53,8 @@
       <a href="https://www.tiktok.com" target="_blank" rel="noreferrer">TikTok</a>
       <a href="https://www.twitter.com" target="_blank" rel="noreferrer">X</a>
     </div>
-    <p>Explore township-specific hubs for announcements, lost-and-found alerts, and route news. Each page is a canvas for local
-      operators, commuters, and sponsors to share updates anchored to the live map.</p>
+    <p>Explore township-specific hubs for announcements, lost-and-found alerts, and route news across taxi, bus, and rail
+      services. Each page is a canvas for local operators, commuters, and sponsors to share updates anchored to the live map.</p>
     <div class="community-grid">
       <a href="/community/soweto.html">Soweto</a>
       <a href="/community/tembisa.html">Tembisa</a>
